# WeightDecomp

./: .gitignore  README copy.md  README.md  citations.md  download_datasets.py  ideas.md  pyproject.toml
.claude/plans/: glowing-dreaming-wind.md
.claude/projects/-home-kevin-cheung-Desktop-WeightDecomp/memory/: MEMORY.md  centered_b_discovery.md
experiments/cifar100_hurwitz/: run.py
experiments/cifar100_train/: run.py
experiments/lora_comparison/: plot.py  run.py
experiments/mlp_b_transforms/: plot.py  run.py
experiments/mnist_dead_relu/: plot.py  plot_lr_sweep.py  run.py  run_lr_sweep.py  utils.py
experiments/shared_abc/: plot.py  run.py
experiments/split_cifar100/: run.py
experiments/split_mnist/: plot.py  run.py
experiments/split_mnist_hurwitz/: run.py
experiments/wikitext_lm/: run.py
notebooks/: dead_relu_recovery.ipynb  fixed_vs_trainable_B.ipynb  sgd_split_vs_adam.ipynb  siren_frequency_collapse.ipynb  vit_dead_neuron_recovery.ipynb
scripts/: diagnose.py
src/WeightDecomp/: __init__.py  checkpoint.py  decomposed_linear.py  diagnostics.py  factor_scope.py  hurwitz.py  lm.py  mlp.py  train_mnist.py  vit.py  weightdecomp.py
test/: hurwitz_decomp_test.py  linear_test.py  muon.py  stable_param_linear_test.py
