[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WeightDecomp"
version = "0.1.0"
description = "Weight decomposition for deep learning models"
authors = [
  { name = "Pak Lun Kevin Cheung", email = "pcheung4@wisc.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "notebook",
    "scipy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "seaborn",
    "jupyterlab",
    "tqdm",
    "pillow",
    "h5py",
    "torch",
    "torchvision",
    "torchaudio",
    "datasets",
    "tiktoken",
    "diffrax",
    "flax",
    "tabpfn",
    "cma>=3.0",
    "numba",
    "optuna>=3.0",
]

[project.optional-dependencies]
cpu = [
  "jax[cpu]==0.6.2",
]

# pip install -e .[gpu-linux] --extra-index-url https://download.pytorch.org/whl/cu124
# Linux GPU support (JAX CUDA only works on Linux)
gpu-linux = [
  "jax[cuda12]==0.6.2",
  "triton==3.4.0",
]

# Windows GPU support - PyTorch CUDA
# Install with: pip install -e .[gpu-windows] --extra-index-url https://download.pytorch.org/whl/cu124
gpu-windows = [
  "jax[cpu]==0.6.2",
]
